--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ body {
 	background-position: center;
 }
 
+p {
+	text-align: center;
+	
+	margin-top: 1%;
+}
+
+ol { 
+	margin: 0 12% 0 12%;
+	float: none;
+	font-family: Times;
+}
+
 h1 {
 	text-align: center;
 	color: white;
@@ -54,7 +66,7 @@ h3 {
 }
 
 .panel-body {
-	height: 500px;
+	height: 90%;
 	background-color: black;
 	color: white;
 }
