--- a/style.css
+++ b/style.css
@@ -20,15 +20,14 @@ body {
 
 p {
 	text-align: center;
-	
 	margin-top: 1%;
 }
 
-ol { 
+/*ol { 
 	margin: 0 12% 0 12%;
 	float: none;
 	font-family: Times;
-}
+}*/
 
 h1 {
 	text-align: center;
@@ -36,9 +35,11 @@ h1 {
 	margin-bottom: 5%;
 	padding: 5px;
 	font-family: bttf;
+	color: black;
+
 }
 
-h2 {
+/*h2 {
 	text-align: center;
 	margin: auto;
 	margin-top: 2%;
@@ -57,7 +58,7 @@ h3 {
 	font-family: bttf;
 	text-shadow: 0 0 5px orange;
 
-}
+}*/
 
 .panel-title {
 	font-family: bttf;
@@ -68,5 +69,16 @@ h3 {
 	height: 90%;
 	background-color: black;
 	color: white;
+}
+
+#nextButton {
+	width: 150px;
+	height: 30px;
+	font-family: bttf;
+	background-color: white;
+	color: black;
+	text-align: center;
+	margin: auto;
+	padding: 5px;
 }
 
