--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: BTTF;
-	src: url("fonts/bttf.ttf");
+	src: url("../fonts/bttf.ttf");
 }
 
 body {
@@ -12,7 +12,7 @@ body {
 	margin-top: 1%;
 	height: 300px;
 	background-color: black;
-	background-image: url("logo.jpg");
+	background-image: url("../images/logo.jpg");
 	background-repeat: no-repeat;
 	background-size: 50% 100%;
 	background-position: center;
@@ -69,9 +69,31 @@ h3 {
 	height: 90%;
 	background-color: black;
 	color: white;
+	margin: auto;
+	text-align: center;
+}
+
+#currentQuestion {
+	font-family: Times;
+	width: 75%;
+	height: auto;
+	margin: auto;
+	background-color: black;
+	color: white;
+	text-align: center;
+}
+
+#message {
+	font-family: Times;
+	background-color: lightgrey;
+	width: 50%;
+	margin: auto;
+	text-align: center;
+	color: black;
 }
 
 #nextButton {
+	font-family: Times;
 	width: 150px;
 	height: 30px;
 	font-family: bttf;
